--- a/styles/style.css
+++ b/styles/style.css
@@ -150,3 +150,49 @@ li div:hover{
   border: 1px solid #c6c6c6;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
 }
+
+#footer{
+  width: 100%;
+  height:40px;
+  position: absolute;
+  background-color: #F2F2F2;
+  border-top: 1px solid #E4E4E4;
+  bottom: 0;
+  left: 0;
+}
+
+#fright{
+  margin-top: 12px;
+  margin-right: 30px;
+  float: right;
+}
+
+#fleft{
+  margin-top:12px;
+  margin-left: 30px;
+  float: left;
+}
+
+#footer a{
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  text-decoration: none;
+  color: #666;
+}
+
+#footer a:hover{
+  text-decoration: underline;
+}
+
+#footer a:active{
+  text-decoration: none;
+  color: #DD4B39;
+}
+
+#footer #fleft a{
+  padding-left: 27px;
+}
+
+#footer #fright a{
+  padding-right: 27px;
+}
