--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
   border: 1px solid #2196f3;
 }
 
-#navbar {
+#navbar{
   float: right;
   display: table;
   width: 10%;
@@ -28,7 +28,7 @@
   align-items: center;
 }
 
-li {
+li{
   display: table-cell;
   vertical-align: middle;
   text-align: center;
@@ -38,7 +38,7 @@ li {
   color: black;
 }
 
-li a {
+li a{
   text-decoration: none;
   color: #000;
   opacity: .75;
@@ -49,7 +49,7 @@ li a:hover{
   opacity: .85;
 }
 
-#apps {
+#apps{
   background-image: url("https://ssl.gstatic.com/gb/images/i2_2ec824b0.png");
   background-position: -132px -38px;
   background-size: 528px 68px;
@@ -61,11 +61,16 @@ li a:hover{
   margin-bottom:10px;
 }
 
-#apps:hover {
+#apps:hover{
   opacity: .85;
 }
 
-li div{
+#apps div{
+  padding-left: 10px;
+  padding-right:10px;
+}
+
+li #bell{
   background-color: rgba(0, 0, 0, 0.55);
   height:20px;
   width: 20px;
@@ -75,15 +80,15 @@ li div{
   border-bottom-right-radius: 20px;
 }
 
-li div:hover{
+li #bell:hover{
   background-color: black;
 }
 
-#notifications {
-  background-color: rgb(0,0,0,0.85);
+#notifications{
   background-image: url("https://ssl.gstatic.com/gb/images/i2_2ec824b0.png");
   background-position: -194px -21px;
   background-size: 528px 68px;
+  opacity: 1;
   display: table-cell;
   position: relative;
   border-bottom-left-radius: 10px;
@@ -96,22 +101,23 @@ li div:hover{
   height: 20px;
 }
 
-#account {
+#account{
   height: 32px;
   width: 32px;
   display: table-cell;
   background-image: url("https://lh4.googleusercontent.com/-h54MyB96BIo/AAAAAAAAAAI/AAAAAAAAAAA/6ucaLqdREHM/s64-c-mo/photo.jpg");
   border-radius:50%;
+  opacity: 1;
   background-size: 32px 32px;
 }
 
-#logo {
+#logo{
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-#logo img {
+#logo img{
   position: relative;
   padding-top: 109px;
   width:272px;
@@ -163,13 +169,11 @@ li div:hover{
 
 #fright{
   margin-top: 12px;
-  margin-right: 30px;
   float: right;
 }
 
 #fleft{
   margin-top:12px;
-  margin-left: 30px;
   float: left;
 }
 
